[project]
name = "survey-garden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "nbformat>=4.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.7.2",
    "xlsxwriter>=3.2.9",
]

[tool.uv]
package = false
